; ModuleID = '/home/carl/AnghaBench/git/extr_remote.c_add_merge.c'
source_filename = "/home/carl/AnghaBench/git/extr_remote.c_add_merge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.branch = type { i8**, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.branch*, i8*)* @add_merge to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_merge(%struct.branch* %0, i8* %1) #0 {
  %3 = alloca %struct.branch*, align 8
  %4 = alloca i8*, align 8
  store %struct.branch* %0, %struct.branch** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.branch*, %struct.branch** %3, align 8
  %6 = getelementptr inbounds %struct.branch, %struct.branch* %5, i32 0, i32 0
  %7 = load i8**, i8*** %6, align 8
  %8 = load %struct.branch*, %struct.branch** %3, align 8
  %9 = getelementptr inbounds %struct.branch, %struct.branch* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = add nsw i64 %10, 1
  %12 = load %struct.branch*, %struct.branch** %3, align 8
  %13 = getelementptr inbounds %struct.branch, %struct.branch* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @ALLOC_GROW(i8** %7, i64 %11, i32 %14)
  %16 = load i8*, i8** %4, align 8
  %17 = load %struct.branch*, %struct.branch** %3, align 8
  %18 = getelementptr inbounds %struct.branch, %struct.branch* %17, i32 0, i32 0
  %19 = load i8**, i8*** %18, align 8
  %20 = load %struct.branch*, %struct.branch** %3, align 8
  %21 = getelementptr inbounds %struct.branch, %struct.branch* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = add nsw i64 %22, 1
  store i64 %23, i64* %21, align 8
  %24 = getelementptr inbounds i8*, i8** %19, i64 %22
  store i8* %16, i8** %24, align 8
  ret void
}

declare dso_local i32 @ALLOC_GROW(i8**, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
